@@ -2,6 +2,10 @@
 
   Version 6.0.0 2012-01-
   ------------------------------------------------------------------------------
+    beta2:
+    - bug fix: UD_IN_FILTER forced to be not ignored when individual
+      files/directories are specified on the command line
+
     beta1:
     - all the disk processing algorithms were reimplemented
       to reach better efficiency and shorter processing times
